[package]
name = "porky"
version = "0.5.0"
readme = "README.md"
edition = "2021"
rust-version = "1.80"

[[bin]]
name = "porky_mdns"
path = "src/porky_mdns.rs"

[dependencies]
# Embassy Dependencies (crates in https://github.com/embassy-rs/embassy)
embassy-time = { version = "0.3.2", default-features = false, features = ["defmt", "defmt-timestamp-uptime"] }
embassy-executor = { version = "0.6.0", default-features = false, features = ["task-arena-size-65536", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-rp = { version = "0.2.0", default-features = false, features = ["rp2040", "defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-sync = { version = "0.6.0", default-features = false }
embassy-futures = { version = "0.1.1", default-features = false }

# Needed even when no wifi - I don't know why yet. Reported to Embassy
cyw43-pio = { version = "0.2.0", default-features = false, features = ["defmt"] }

# Optional Embassy Dependencies
cyw43 = { version = "0.2.0", default-features = false, features = ["defmt"] }
embassy-net = { version = "0.5.0", default-features = false, features = ["defmt", "tcp", "udp", "dns", "dhcpv4"] }

rand = { version = "0.8.5", default-features = false }

portable-atomic = { version = "1.5", default-features = false, features = ["critical-section"] }
static_cell = { version = "2", default-features = false }
panic-probe = { version = "0.3", default-features = false, features = ["print-defmt"] }
defmt = { version = "0.3", default-features = false }
defmt-rtt = { version = "0.4", default-features = false }
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = { version = "0.7.0", default-features = false }

embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }

edge-mdns = { version = "0.4", features = ["io"] }
edge-nal-embassy = { version = "0.4", default-features = false }
edge-nal = { version = "0.4", default-features = false}

[patch.crates-io]
# TODO remove this when cyw43 releases with WPA3 support
embassy-time = { version = "0.3.2", git = "https://github.com/embassy-rs/embassy.git" }
embassy-executor = { version = "0.6.0", git = "https://github.com/embassy-rs/embassy.git" }
embassy-rp = { version = "0.2.0", git = "https://github.com/embassy-rs/embassy.git" }
embassy-sync = { version = "0.6.0", git = "https://github.com/embassy-rs/embassy.git" }
embassy-futures = { version = "0.1.1", git = "https://github.com/embassy-rs/embassy.git" }
cyw43 = { git = "https://github.com/embassy-rs/embassy.git" }
cyw43-pio = { git = "https://github.com/embassy-rs/embassy.git" }
embassy-net = { git = "https://github.com/embassy-rs/embassy.git" }

[package.metadata.cargo-all-features]
skip_optional_dependencies = true
always_include_features = ["no_std", "wifi"]